prep: nodejs nosql without orm

--- a/NOSQL/views/shop/cart.pug
+++ b/NOSQL/views/shop/cart.pug
@@ -3,7 +3,7 @@ extends ../layouts/main.pug
 block contents
   if result === 'success'
     div.alert.alert-success The new item was added!
-  if action === 'delete'
+  if result === 'delete'
     div.alert.alert-danger The item was deleted!
   if products.length > 0
     table.table.table-bordered.mx-4.my-4.pr-4
@@ -12,7 +12,6 @@ block contents
           th Image
           th Name
           th Description
-          th CategoryID
           th Quantity 
           th 
       tbody
@@ -22,7 +21,6 @@ block contents
               img(src=`/img/${product.image}` width="80px" height="100px") 
             td #{product.name} 
             td #{product.description}
-            td #{product.categoryId}
             td #{product.quantity}
             td
               a.btn.btn-outline-danger.btn-sm.mx-2(href=`/deleteCartItem?id=${product._id}`) Delete
@@ -31,10 +29,10 @@ block contents
             td 
             td 
             td
-            td 
                 Total Price =  #{total}
+            td 
 
-    a.btn.btn-outline-secondary.btn-sm.mx-2(href=`/orders`) Complete Order
+    a.btn.btn-outline-secondary.btn-sm.mx-2(href=`/createOrder`) Complete Order
 
   else 
     h1 No Product
